[package]
name = "secret_tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boringtun = { version = "0.4.0" }
etherparse = { version = "0.12.0" }
packet-builder = { version = "0.6.0" }
pnet = { version = "0.30.0" }
minimuxer = { version = "*", path = "../minimuxer" }

byteorder = { version = "1.4.3" }
crossbeam-channel = { version = "0.5.5" }
lazy_static = { version = "1.4.0" }

rand = { version = "0.8.5" }
libc = { version = "0.2.126" }
c_vec = { version = "2.0.0" }

simple_logger = { version = "2.3.0" }
log = { version = "0.4.17" }

[build-dependencies]
cbindgen = { version = "0.24.3" }

[lib]
crate-type = ["staticlib", "cdylib"]